# LightSwallow

./: .gitignore  CMakeLists.txt  LICENSE  README.md  SandboxExec.cpp  SandboxExec.h  build.gradle.kts  build.sh  gradle.properties  main.cpp  settings.gradle.kts
gradle/wrapper/: gradle-wrapper.properties
lib/: cgroups.cpp  cgroups.h  file_utils.cpp
lightswallow-core/: build.gradle.kts
lightswallow-core/src/main/kotlin/best/nyan/lightswallow/core/: LightSwallowEntity.kt  LightSwallowEntityGroup.kt
lightswallow-core/src/main/kotlin/best/nyan/lightswallow/core/process/: LightSwallowProcess.kt  ProcessParameter.kt
lightswallow-core/src/main/kotlin/best/nyan/lightswallow/core/result/: ProcessResult.kt
lightswallow-core/src/main/kotlin/best/nyan/lightswallow/core/sandbox/: SandboxCore.kt  SandboxHook.kt
lightswallow-native/: CMakeLists.txt
lightswallow-native/lib/: cgroup.h  file_utils.h  pipe.h  sandbox_runtime.h  semaphore.h  utils.h
lightswallow-native/lib/jni/: JniUtils.h  best_nyan_lightswallow_core_sandbox_SandboxHook.h
lightswallow-native/src/: cgroup.cpp  file_utils.cpp  pipe.cpp  sandbox_runtime.cpp  semaphore.cpp  utils.cpp
lightswallow-native/src/jni/: JniUtils.cpp  best_nyan_lightswallow_core_sandbox_SandboxHook.cpp
lightswallow-server/: build.gradle.kts
lightswallow-server/src/main/kotlin/best/nyan/lightswallow/server/: LightSwallowServerLifecycle.kt
lightswallow-server/src/main/kotlin/best/nyan/lightswallow/server/config/: AppConfig.kt
lightswallow-server/src/main/kotlin/best/nyan/lightswallow/server/entity/: RunningSandboxRuntimeRequest.kt  SandboxRunnableRequest.kt
lightswallow-server/src/main/kotlin/best/nyan/lightswallow/server/resource/: MessageQueueHandleResource.kt  PingResource.kt  RequestSubmitHandleResource.kt  StatusResource.kt  TempFileResource.kt
lightswallow-server/src/main/kotlin/best/nyan/lightswallow/server/util/: FileUtils.kt
(+1 files in other folders)
